@@ -1,0 +1,8 @@
+language: python
+python:
+  - "2.6"
+  - "2.7"
+# command to install dependencies
+install: "python bootstrap.py && bin/buildout"
+# # command to run tests
+script: bin/test
