@@ -1,0 +1,26 @@
+[buildout]
+extensions = buildout.dumppickedversions
+develop = .
+parts = test
+newest = false
+eggs-directory = ${buildout:directory}/eggs
+include-site-packages = false
+exec-sitecustomize = false
+
+versions = versions
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = corneti.recipes.codeintel [tests]
+
+[versions]
+mr.scripty = 1.0b3
+setuptools = 0.6c12dev-r88846
+z3c.recipe.scripts = 1.0.1
+zc.buildout = 1.6.3
+zc.recipe.egg = 1.3.2
+zc.recipe.testrunner = 1.4.0
+zope.exceptions = 4.0.5
+zope.interface = 4.0.3
+zope.testing = 4.1.1
+zope.testrunner = 4.0.4
